# oya-frontend

./: .gitignore  AGENTS.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  Dioxus.toml  IMPLEMENTATION-78Y.md  IMPLEMENTATION-RESTATE-DIOXUS.md  QUALITY_GATE_IMPLEMENTATION.md  README.md  TEST_SUMMARY.md  chrome_dump.html  contract-spec.md  dioxus_tailwind_ai_guide_review.md  final_dom.html  final_dom_8082.html  final_dom_8083.html  final_dom_ip.html  fix.patch  fix_clippy_noise.py  glimmcatf8t9kqrpp9jacchvoiic4voi  implementation.md  libtest_proptest_syntax.rlib  manifest  moon.yml  package.json  playwright.config.ts  proof_dom.html  prove_it.js  style.css  tail  update_edges.py  update_graph.py  update_layout.py  update_layout_clippy.py  update_layout_markdown.py  update_main_category.py  update_mod_clippy.py  update_sidebar.py  update_sidebar_categories.py  (+1 more)
.beads/: beads.db  issues.jsonl  last-touched
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.codanna/: settings.toml
.moon/: tasks.yml  workspace.yml
.runtime/: session_id
.zjj/: config.toml  state.db  state.db-shm  state.db-wal
busted-flow/: ENHANCEMENTS.md  QUICKSTART.md
e2e/: agent_restate.sh  effect.ts  flow-editor-advanced.spec.ts  flow-editor-adversarial.spec.ts  flow-editor.spec.ts  flow-helpers.ts
fuzz/: Cargo.toml
fuzz/corpus/deserialize_expression_tree/: 00000001_seed
fuzz/fuzz_targets/: deserialize_expression_tree.rs  fuzz_cycle_detection.rs  fuzz_dag_topological_sort.rs  fuzz_execution_state.rs  migration_classlist_fuzz.rs  migration_css_token_fuzz.rs  migration_fuzz.rs  parse_expression_depth.rs
kani/: cycle_detection_harnesses.rs  execution_state_harnesses.rs  harnesses.rs  migration_harnesses.rs
mutants.out/: caught.txt  lock.json  missed.txt  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  outcomes.json  unviable.txt
oya-frontend-1af/: .codannaignore  .jjignore  AGENTS.md  Cargo.toml  README.md  fix_handler.patch  fix_node_badges.py  import.sql  martin-fowler-tests.md  moon.yml  package.json  tsconfig.playwright.json  update_main_init.py  update_metadata.py  update_node_badges.py
scripts/: run-quality-gate.sh  validate-scenarios.sh  validate-spec.sh
specs/: durable-execution-orchestrator.yaml  flow-wasm-v1.yaml  parallel-branch-contract.md  parallel-branch-tests.md
src/: error.rs  errors.rs  lib.rs  main.rs  migration.rs  proptests.rs
test-results/: .last-run.json
tests/: adversarial_tests.rs  bead_flow_extender_regression.rs  component.spec.js  coverage_cli_regressions.rs  cycle_detection_e2e.rs  cycle_detection_integration.proptest-regressions  cycle_detection_integration.rs  drag_unit_test.rs  e2e_acceptance.rs  execution_state_benchmarks.rs  execution_state_e2e_tests.rs  execution_state_integration_tests.rs  execution_state_proptest.proptest-regressions  execution_state_proptest.rs  execution_state_unit_tests.rs  expression_depth_tests.rs  flow_extender_contracts.rs  graph_layout_regressions.rs  graph_property_tests.rs  graph_regressions.rs  migration_integration_tests.rs  migration_proptest.rs  migration_unit_tests.rs  node_drag_regression.rs  proptest_tests.rs  red_queen_execution_state.rs  right_panel_integration_tests.rs  scenario_runner_extension_cases.rs  self_connection_cycle_detection.rs  serde_roundtrip_tests.rs  snapshot_serialization_tests.rs  toast_tests.rs  ui_test.rs  undo_redo_integration.rs  validation_integration_tests.rs
twins/: catalog.yaml  flow-wasm-universe.yaml
(+850 files in other folders)
