[package]
name = "new-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.3"

[dev-dependencies]
playwright = "0.0.20"
tokio = { version = "1", features = ["full"] }

[lib]
name = "new_app"
path = "src/lib.rs"

[[bin]]
name = "new-app"
path = "src/main.rs"

[[bin]]
name = "agent-feedback"
path = "src/bin/agent_feedback.rs"

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"

[[bin]]
name = "quality-gate"
path = "src/bin/quality-gate.rs"
