[package]
name = "oya-frontend-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oya-frontend = { path = ".." }
serde_json = "1.0"

[[bin]]
name = "parse_expression_depth"
path = "fuzz_targets/parse_expression_depth.rs"
test = false
doc = false

[[bin]]
name = "deserialize_expression_tree"
path = "fuzz_targets/deserialize_expression_tree.rs"
test = false
doc = false

[[bin]]
name = "fuzz_execution_state"
path = "fuzz_targets/fuzz_execution_state.rs"
test = false
doc = false

[profile.release]
debug = 1
